@@ -38,13 +38,14 @@
 package com.sun.jersey.impl.provider.entity;
 
 import com.sun.jersey.core.provider.AbstractMessageReaderWriterProvider;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Type;
 import javax.activation.DataSource;
-import javax.mail.util.ByteArrayDataSource;
 import javax.ws.rs.Consumes;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
@@ -58,6 +59,82 @@ import javax.ws.rs.core.MultivaluedMap;
 @Consumes({"application/octet-stream", "*/*"})
 public class DataSourceProvider extends AbstractMessageReaderWriterProvider<DataSource> {
     
+    /**
+     * Modified from javax.mail.util.ByteArrayDataSource
+     * 
+     * A DataSource backed by a byte array.  The byte array may be
+     * passed in directly, or may be initialized from an InputStream
+     * or a String.
+     *
+     * @since JavaMail 1.4
+     * @author John Mani
+     * @author Bill Shannon
+     * @author Max Spivak
+     */
+    public static class ByteArrayDataSource implements DataSource {
+        private byte[] data;
+        private int len = -1;
+        private String type;
+        private String name = "";
+
+        static class DSByteArrayOutputStream extends ByteArrayOutputStream {
+            public byte[] getBuf() {
+                return buf;
+            }
+
+            public int getCount() {
+                return count;
+            }
+        }
+
+        public ByteArrayDataSource(InputStream is, String type) throws IOException {
+            DSByteArrayOutputStream os = new DSByteArrayOutputStream();
+            byte[] buf = new byte[8192];
+            int len;
+            while ((len = is.read(buf)) > 0)
+                os.write(buf, 0, len);
+            this.data = os.getBuf();
+            this.len = os.getCount();
+
+            /*
+             * ByteArrayOutputStream doubles the size of the buffer every time
+             * it needs to expand, which can waste a lot of memory in the worst
+             * case with large buffers.  Check how much is wasted here and if
+             * it's too much, copy the data into a new buffer and allow the
+             * old buffer to be garbage collected.
+             */
+            if (this.data.length - this.len > 256*1024) {
+                this.data = os.toByteArray();
+                this.len = this.data.length;	// should be the same
+            }
+            this.type = type;
+        }
+
+        public InputStream getInputStream() throws IOException {
+            if (data == null)
+                throw new IOException("no data");
+            if (len < 0)
+                len = data.length;
+            return new ByteArrayInputStream(data, 0, len);
+        }
+
+        public OutputStream getOutputStream() throws IOException {
+            throw new IOException("cannot do this");
+        }
+
+        public String getContentType() {
+            return type;
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+    }
+
     public DataSourceProvider() {
         Class<?> c = DataSource.class;
     }
